--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Welcome to my Website!</h1>
         <h2>Hello!</h2>
-        <h3>Hi!</h3>
+        <h3 style="color:blue">Hi!</h3>
         Hello, World!
     </body>
 </html>
